--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,6 @@
     "import/no-named-default": 0,
     "import/prefer-default-export": 0,
     "react/react-in-jsx-scope": 0,
-    // Custom rules
     "eslint no-confusing-arrow": [
       0,
       {
@@ -47,7 +46,6 @@
       0,
       "nofunc"
     ],
-    // TODO: turn on later
     "comma-dangle": [
       0
     ],
@@ -57,7 +55,7 @@
     ],
     "prefer-const": 0,
     "semi": [2, "never"],
-    "linebreak-style" : 0 /* Expected linebreaks to be 'LF' but found 'CRLF' */
+    "linebreak-style" : 0
   },
   "env": {
     "node": true,
